# SimpleEventSystem

./: .gitignore  CMakeLists.txt  Makefile  README.md
.github/workflows/: compileAndRunTests.yml
cmake/: docs.cmake
docs/: Doxyfile
examples/: CMakeLists.txt  example_01.cpp
gh_pages/: index.html
include/: event.hpp  eventDebug.hpp  eventGenerator.hpp  eventListener.hpp  eventLoop.hpp
include/simpleEventSystem/: event.hpp  eventDebug.hpp  eventGenerator.hpp  eventListener.hpp  eventLoop.hpp
source/: CMakeLists.txt  event.cpp  eventGenerator.cpp  eventListener.cpp  eventLoop.cpp
tests/: CMakeLists.txt  main.cpp  myTestClasses.hpp  test1.cpp  test_posting.cpp  test_registration.cpp
